--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.0"
+    "mongoose": "^5.13.0",
+    "nodemon": "^2.0.13",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {},
   "scripts": {
